...
      <Tabs.Screen
        name="mypage"
        options={{
          title: '',
          tabBarIcon: ({ color, focused }) => (
            <CopilotStep text={t('tutorial.mypageTab')} order={4} name="mypage-tab">
              <CopilotView testID="tab-mypage" style={{ marginTop: 2 }}>
                <Ionicons name={focused ? 'person' : 'person-outline'} size={26} color={color} />
              </CopilotView>
            </CopilotStep>
          ),
        }}
      />
...
